--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <title>Enter PNR - Meals on Wheels</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 </head>
-<body>
-    <h1>This is main page </h1>
+<body class="bg-gradient-to-r from-blue-500 to-purple-600 flex items-center justify-center h-screen font-sans">
+
+  <div class="bg-white p-8 rounded-xl shadow-lg text-center max-w-md w-full animate__animated animate__fadeInDown">
+    <h1 class="text-3xl font-bold mb-4 text-blue-700">🍱 Meals on Wheels</h1>
+    <p class="text-gray-600 mb-4">Enter your 10-digit PNR to browse meals during your journey</p>
+    <input type="text" id="pnrInput" maxlength="10" class="w-full border rounded p-2 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="e.g. 1234567890">
+    <button onclick="validatePNR()" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 w-full">Proceed</button>
+    <p id="error" class="text-red-600 mt-2 hidden"></p>
+  </div>
+
+<script>
+  // 🔥 Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyDN2T8z9fILTmLE7AfIUTEZUZDcJc5lyWo",
+    authDomain: "meals-on-wheels-4d406.firebaseapp.com",
+    databaseURL: "https://meals-on-wheels-4d406-default-rtdb.firebaseio.com",
+    projectId: "meals-on-wheels-4d406",
+    storageBucket: "meals-on-wheels-4d406.appspot.com",
+    messagingSenderId: "839338162117",
+    appId: "1:839338162117:web:32ba607a2f92328d4bfdac",
+    measurementId: "G-4CFY6T113P"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  async function validatePNR() {
+    const input = document.getElementById("pnrInput").value.trim();
+    const errorText = document.getElementById("error");
+
+    if (input.length !== 10 || isNaN(input)) {
+      errorText.textContent = "Please enter a valid 10-digit PNR number.";
+      errorText.classList.remove("hidden");
+      return;
+    }
+
+    const doc = await db.collection("pnrs").doc(input).get();
+    if (!doc.exists) {
+      errorText.textContent = "PNR not found. Please check and try again.";
+      errorText.classList.remove("hidden");
+      return;
+    }
+
+    // Save PNR locally and redirect
+    localStorage.setItem("pnr", input);
+    window.location.href = "menu.html";
+  }
+</script>
+
 </body>
 </html>
