--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p class="text-gray-600 mb-4">Enter your 10-digit PNR to browse meals during your journey</p>
     <input type="text" id="pnrInput" maxlength="10" class="w-full border rounded p-2 mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="e.g. 1234567890">
     <button onclick="validatePNR()" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 w-full">Proceed</button>
+    <a href="admin.html"><button class="mt-10 bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 w-full">Admin Login</button></a>
     <p id="error" class="text-red-600 mt-2 hidden"></p>
   </div>
 
