--- a/menu.html
+++ b/menu.html
@@ -186,7 +186,7 @@
           <p><strong>Name:</strong> ${data.name}</p>
           <p><strong>Seat:</strong> ${data.coachNumber} ${data.seat}</p>
           <p><strong>Train:</strong> ${data.train} (${data.trainNumber})</p>
-          <p><strong>From:</strong> ${data.fromStation} → <strong>To:</strong> ${data.toStation}</p>
+          <p><strong>From:</strong> ${data.source} → <strong>To:</strong> ${data.destination}</p>
           <p><strong>PNR:</strong> ${pnr}</p>
         `;
       } else {
